--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
+h1, h2 {
     text-align: center;
     margin-bottom: 20px;
 }
@@ -34,12 +34,14 @@ th {
     background-color: #f2f2f2;
 }
 
-input[type="file"] {
+input[type="file"], input[type="text"], input[type="date"], button {
     margin-bottom: 10px;
+    padding: 10px;
+    width: calc(100% - 22px);
+    box-sizing: border-box;
 }
 
 button {
-    padding: 10px 20px;
     background-color: #007BFF;
     color: white;
     border: none;
