--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,10 @@ h1, h2 {
     margin-bottom: 20px;
 }
 
+.section {
+    margin-bottom: 40px;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
@@ -34,7 +38,7 @@ th {
     background-color: #f2f2f2;
 }
 
-input[type="file"], input[type="text"], input[type="date"], button {
+input[type="file"], input[type="text"], input[type="date"], textarea, button {
     margin-bottom: 10px;
     padding: 10px;
     width: calc(100% - 22px);
